<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.addapplication.AddApplicationActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/image_back"
                    style="@style/image_back_or_close"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    style="@style/image_spare_parts"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:id="@+id/image_check"
                    style="@style/image_check"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/title_application"
            style="@style/text_from_add"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:text="@string/title_app"/>

    <EditText
            android:id="@+id/enter_title_app"
            style="@style/edit"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/title_application"
            android:hint="@string/enter_title_app"/>

    <TextView
            android:id="@+id/app_description"
            style="@style/text_from_add"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/enter_title_app"
            android:text="@string/description_app"/>

    <EditText
            android:id="@+id/enter_description_app"
            style="@style/edit"
            android:layout_height="80dp"
            android:gravity="top"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/app_description"
            android:hint="@string/enter_description_app"/>

    <TextView
            android:id="@+id/address"
            style="@style/text_from_add"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/enter_description_app"
            android:text="@string/address"/>

    <EditText
            android:id="@+id/enter_address"
            style="@style/edit"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/address"
            android:hint="@string/enter_address"/>

    <TextView
            android:id="@+id/your_name"
            style="@style/text_from_add"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/enter_address"
            android:text="@string/your_name"/>

    <EditText
            android:id="@+id/enter_name"
            style="@style/edit"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/your_name"
            android:hint="@string/enter_name"/>

    <TextView
            android:id="@+id/your_phone"
            style="@style/text_from_add"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/enter_name"
            android:text="@string/your_phone"/>

    <EditText
            android:id="@+id/enter_phone"
            style="@style/edit"
            app:layout_constraintStart_toStartOf="@id/title_application"
            app:layout_constraintTop_toBottomOf="@id/your_phone"
            android:hint="@string/enter_phone"/>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/cpv_add_application"
            style="@style/progress_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cpv_color="@color/orange2"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>