<?xml version="1.0" encoding="utf-8"?>
<com.example.spare_parts.screens.common.KeyboardAwareScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.editvehicle.EditVehicleActivity">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/image_back"
                        style="@style/image_back_or_close"
                        android:src="@drawable/ic_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                        style="@style/image_spare_parts"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                        android:id="@+id/add_photo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/image_check"
                        android:src="@drawable/ic_add_photo"/>

                <ImageView
                        android:id="@+id/image_check"
                        style="@style/image_check"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
                android:id="@+id/image_vehicle"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:src="@drawable/photo"/>

        <TextView
                android:id="@+id/name_vehicle"
                style="@style/text_from_add"
                app:layout_constraintStart_toStartOf="@id/image_vehicle"
                app:layout_constraintTop_toBottomOf="@id/image_vehicle"
                android:text="@string/vehicle_name"/>

        <EditText
                android:id="@+id/auto_input"
                style="@style/edit_profile"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/name_vehicle"
                app:layout_constraintTop_toBottomOf="@id/name_vehicle"
                android:hint="@string/enter_vehicle_name"/>

        <TextView
                android:id="@+id/work_vehicle"
                style="@style/text_from_add"
                app:layout_constraintStart_toStartOf="@id/auto_input"
                app:layout_constraintTop_toBottomOf="@id/auto_input"
                android:text="@string/perform_work"/>

        <EditText
                android:id="@+id/work_input"
                style="@style/edit_profile"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/work_vehicle"
                app:layout_constraintTop_toBottomOf="@id/work_vehicle"
                android:gravity="top"
                android:hint="@string/enter_perform_work" />

        <TextView
                android:id="@+id/price_vehicle"
                style="@style/text_from_add"
                app:layout_constraintStart_toStartOf="@id/work_input"
                app:layout_constraintTop_toBottomOf="@id/work_input"
                android:text="@string/cost_work"/>

        <EditText
                android:id="@+id/price_input_1"
                style="@style/edit_profile"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/price_vehicle"
                app:layout_constraintTop_toBottomOf="@id/price_vehicle"
                android:hint="@string/cost_1"/>

        <EditText
                android:id="@+id/price_input_2"
                style="@style/edit_profile"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/price_input_1"
                app:layout_constraintTop_toBottomOf="@id/price_input_1"
                android:hint="@string/cost_2"/>

        <TextView
                android:id="@+id/categories_vehicle"
                style="@style/text_from_add"
                app:layout_constraintStart_toStartOf="@id/price_input_2"
                app:layout_constraintTop_toBottomOf="@id/price_input_2"
                android:text="@string/vehicle_categories"/>

        <Spinner
                android:id="@+id/categories_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="@id/categories_vehicle"
                app:layout_constraintTop_toBottomOf="@id/categories_vehicle"
                android:background="@drawable/spinner_bg"/>

        <TextView
                android:id="@+id/ttx"
                style="@style/text_from_add"
                android:text="@string/technical_specifications"
                app:layout_constraintStart_toStartOf="@id/categories_spinner"
                app:layout_constraintTop_toBottomOf="@id/categories_spinner"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_0"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/height_arrow"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/height_arrow" />

            <EditText
                    android:id="@+id/mass_arrow"
                    style="@style/edit_profile"
                    app:layout_constraintTop_toBottomOf="@id/height_arrow"
                    android:layout_marginTop="15dp"
                    android:hint="@string/mass_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx"
                app:layout_constraintTop_toTopOf="@id/ttx_constraint_0">

            <EditText
                    android:id="@+id/volume_mix"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/volume_mix" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/volume_mix_arrow"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/volume_mix" />

            <EditText
                    android:id="@+id/height_mix_arrow"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/volume_mix_arrow"
                    android:hint="@string/height_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/width_manipulator"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/width_bodywork" />

            <EditText
                    android:id="@+id/length_manipulator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/width_manipulator"
                    android:hint="@string/length_bodywork" />

            <EditText
                    android:id="@+id/mass_manipulator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/length_manipulator"
                    android:hint="@string/mass_bodywork" />

            <EditText
                    android:id="@+id/length_arrow_manipulator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/mass_manipulator"
                    android:hint="@string/height_arrow" />

            <EditText
                    android:id="@+id/mass_arrow_manipulator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/length_arrow_manipulator"
                    android:hint="@string/mass_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_4"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/volume_dump"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/volume_bodywork" />

            <EditText
                    android:id="@+id/mass_dump"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/volume_dump"
                    android:hint="@string/mass_bodywork" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_5"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/width_truck"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/width_area" />

            <EditText
                    android:id="@+id/length_truck"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/width_truck"
                    android:hint="@string/length_area" />

            <EditText
                    android:id="@+id/mass_truck"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/length_truck"
                    android:hint="@string/mass" />

            <EditText
                    android:id="@+id/height_truck"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/mass_truck"
                    android:hint="@string/loading_height" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ttx_constraint_6"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ttx"
                app:layout_constraintTop_toBottomOf="@id/ttx">

            <EditText
                    android:id="@+id/mass_front_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="5dp"
                    android:hint="@string/mass_front_excavator" />

            <EditText
                    android:id="@+id/height_front_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/mass_front_excavator"
                    android:hint="@string/height_front_excavator" />

            <EditText
                    android:id="@+id/volume_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/height_front_excavator"
                    android:hint="@string/volume_excavator" />

            <EditText
                    android:id="@+id/depth_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/volume_excavator"
                    android:hint="@string/depth_excavator" />

            <EditText
                    android:id="@+id/volume_front_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/depth_excavator"
                    android:hint="@string/volume_front_excavator" />

            <EditText
                    android:id="@+id/height_excavator"
                    style="@style/edit_profile"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/volume_front_excavator"
                    android:hint="@string/height_excavator" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.rahatarmanahmed.cpv.CircularProgressView
                android:id="@+id/cpv_add_vehicle"
                style="@style/progress_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cpv_color="@color/orange2"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.example.spare_parts.screens.common.KeyboardAwareScrollView>