<?xml version="1.0" encoding="utf-8"?>
<com.example.spare_parts.screens.common.KeyboardAwareScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_const"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.login.LoginActivity"
            android:background="@color/layout_gray">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        style="@style/image_spare_parts"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                style="@style/text_center"
                android:text="@string/welcome"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
                android:id="@+id/email_input"
                style="@style/edit_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />

        <EditText
                android:id="@+id/password_input"
                style="@style/edit_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input"
                android:hint="@string/password"
                android:inputType="textPassword" />

        <Button
                android:id="@+id/login_btn"
                style="@style/login_btn"
                android:text="@string/enter"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input" />

        <Button
                android:id="@+id/register_btn"
                style="@style/button"
                android:text="@string/register"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView
                android:id="@+id/password_recovery"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/text_center"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/password_recovery"
                android:background="@drawable/login_text_bg"
                />


        <com.github.rahatarmanahmed.cpv.CircularProgressView
                android:id="@+id/cpv_login"
                style="@style/progress_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cpv_color="@color/orange2"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true"
                app:layout_constraintVertical_bias="0.35" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.example.spare_parts.screens.common.KeyboardAwareScrollView>